DiD S3: dialogue fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -21,7 +21,7 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "The colored patchwork of fall eventually fades wintry snowfall drifting over barren lands. The nights grow longer as the sun disappears behind a seemingly perpetual mist of pallid clouds. Hounded by the elements, the two necromancers retreat into the hills to seek shelter. By a stroke of good fortune, they stumble across a mostly abandoned cave just as the winter sets in."
+            story=_ "The colored patchwork of fall eventually fades to wintry snowfall drifting over barren lands. The nights grow longer as the sun disappears behind a seemingly perpetual mist of pallid clouds. Hounded by the elements, the two necromancers retreat into the hills to seek shelter. By a stroke of good fortune, they stumble across a mostly abandoned cave just as the winter sets in."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
     [/story]
@@ -296,7 +296,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Simpleminded, obtuse creatures."
+            message= _ "Simple-minded, obtuse creatures."
         [/message]
 
         [message]
@@ -436,7 +436,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Bind the strings of energy to the bone. Skeletons are no more than puppets. Novices will directly control their movement with strands of dark magic, but you should have no need for such crude methods. Instead, impart your will on the skeleton, spread the threads over the bones, then let loose the twine from your hand. If your will is strong enough, the skeleton will be able to move on its own."
+            message= _ "Bind the strings of energy to the bone. Skeletons are no more than puppets. Novices will directly control their movement with strands of dark magic, but you should have no need for such crude methods. Instead, impart your will upon the skeleton, spread the threads over the bones, then let loose the twine from your hand. If your will is strong enough, the skeleton will be able to move on its own."
         [/message]
 
         [message]
@@ -550,9 +550,22 @@
             id=Ogre3
         [/kill]
 
+        [remove_shroud]
+            x,y=17,6
+            radius=1
+        [/remove_shroud]
+
+        [scroll_to]
+            x,y=17,6
+        [/scroll_to]
+
+        [delay]
+            time=1000
+        [/delay]
+
         [message]
             speaker=Darken Volk
-            message= _ "This time, use that bow to create a Skeleton Archer."
+            message= _ "The ogre seems to have looted a bow. Use it to create a Skeleton Archer."
         [/message]
 
         [message]
@@ -780,17 +793,17 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "I feel it."
+            message= _ "I feel them."
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "Controlling spirits can be somewhat haphazard even for experienced necromancers. When imprisoning a soul, use all your might to retain control over it. You must exert your will over its own, or the spirit will break free and destroy you."
+            message= _ "Controlling spirits can be somewhat hazardous even for experienced necromancers. When imprisoning a soul, use all your might to retain control over it. You must exert your will over its own, or the spirit will break free and destroy you."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "I... I will try."
+            message= _ "I... I will do my best."
         [/message]
 
         [animate_unit]
@@ -850,12 +863,12 @@
 
         [message]
             speaker=Darken Volk
-            message=_ "You blithering fool! How did you let your will be overcome by a half-sentient creature that can hardly come up with a single coherent sentence? Let your will slip further and you shall join the many other young necromancers who have died at the hands of their own servants."
+            message=_ "You blithering fool! How did you let your will be overcome by a half-sentient creature that can hardly come up with a single coherent sentence?! Let your will slip further and you shall join other young necromancers who have died at the hands of their own servants."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message=_ "My will is strong, but he still does not return to me. What should I do?!"
+            message=_ "My will is strong, but he still does not return to me. What should I do?"
         [/message]
 
         [message]
