DiD S3: gameplay tweaks

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -146,17 +146,6 @@
             ai_special=guardian
         [/unit]
 
-        {GENERIC_UNIT 2 (Giant Scorpion) 26 8} {GUARDIAN}
-        {GENERIC_UNIT 2 (Giant Scorpion) 28 10} {GUARDIAN}
-        {GENERIC_UNIT 2 (Giant Scorpion) 28 3} {GUARDIAN}
-        {GENERIC_UNIT 2 (Giant Scorpion) 25 4} {GUARDIAN}
-        {GENERIC_UNIT 2 (Giant Scorpion) 23 6} {GUARDIAN}
-
-        {GENERIC_UNIT 2 (Giant Scorpion) 5 5} {GUARDIAN}
-        {GENERIC_UNIT 2 (Giant Scorpion) 8 3} {GUARDIAN}
-        {GENERIC_UNIT 2 (Giant Scorpion) 9 8} {GUARDIAN}
-        {GENERIC_UNIT 2 (Giant Scorpion) 8 8} {GUARDIAN}
-
         {PLACE_IMAGE "items/bow.png" 17 6}
         [unit]
             type=Young Ogre
@@ -188,6 +177,39 @@
             id=Naga1
             ai_special=guardian
         [/unit]
+
+        [object]
+            silent=yes
+            duration=forever
+            take_only_once=no
+            [filter]
+                id=Naga1
+            [/filter]
+            [effect]
+                apply_to=movement_costs
+                replace=yes
+                [movement_costs]
+                    flat={UNREACHABLE}
+                    cave={UNREACHABLE}
+                [/movement_costs]
+            [/effect]
+        [/object]
+        [object]
+            silent=yes
+            duration=forever
+            take_only_once=no
+            [filter]
+                id=Naga2
+            [/filter]
+            [effect]
+                apply_to=movement_costs
+                replace=yes
+                [movement_costs]
+                    flat={UNREACHABLE}
+                    cave={UNREACHABLE}
+                [/movement_costs]
+            [/effect]
+        [/object]
 
         {GENERIC_UNIT 2 (Troll Whelp) 2 15} {GUARDIAN}
         {GENERIC_UNIT 2 (Troll Whelp) 6 17} {GUARDIAN}
@@ -625,6 +647,14 @@
         [/terrain]
         [redraw][/redraw]
 
+        {GENERIC_UNIT 2 (Giant Scorpion) 26 8}
+        {GENERIC_UNIT 2 (Giant Scorpion) 28 10}
+        {GENERIC_UNIT 2 (Giant Scorpion) 28 3}
+        {GENERIC_UNIT 2 (Giant Scorpion) 25 4}
+        {GENERIC_UNIT 2 (Giant Scorpion) 23 6}
+
+        {MODIFY_UNIT (type=Giant Scorpion) max_moves 4}
+
         {OBJECTIVE_EXPLORE}
     [/event]
 
@@ -966,6 +996,13 @@
 
         {FULL_HEAL (side=1)}
 
+        {GENERIC_UNIT 2 (Giant Scorpion) 5 5}
+        {GENERIC_UNIT 2 (Giant Scorpion) 8 3}
+        {GENERIC_UNIT 2 (Giant Scorpion) 9 8}
+        {GENERIC_UNIT 2 (Giant Scorpion) 8 8}
+
+        {MODIFY_UNIT (type=Giant Scorpion) max_moves 4}
+
         {OBJECTIVE_EXPLORE}
     [/event]
 
@@ -1001,6 +1038,16 @@
             speaker=Darken Volk
             message= _ "Threats to your skeletons, but no more than fodder for your ghosts. Eliminate them all."
         [/message]
+
+        [modify_unit]
+            [filter]
+                race=troll
+            [/filter]
+            [effect]
+                apply_to=status
+                remove=guardian
+            [/effect]
+        [/modify_unit]
 
         [objectives]
             side=1
