--- a/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
@@ -18,11 +18,11 @@
     [story]
         [part]
             music=underground.ogg
-            story= _ "Weeks pass in the cold, bare caverns. There is little light and little food, but Malin’s burning desire for vengeance sustains him through his training. As the grip of black magic grows stronger, so does his control of the undead. He finds it to be a mastery of a different sort than what he learned on the Isle of Alduin. The magic reaches out to him as it never has before; he <i>feels</i> it, the flows of energy, ebony power streaming through his soul. He listens and it speaks back — he senses its will and lets it guide him — he embraces the dark magic as an extension of himself more than a simple tool."
+            story= _ "Weeks pass in the cold, bare caverns. There is little light and little food, but Malin’s burning desire for vengeance sustains him through his training. As the grip of black magic grows stronger, so does his control of the undead. He finds it to be a mastery of a different sort than what he learned at the Academy. The magic reaches out to him as it never has before; he <i>feels</i> it, the flows of energy, ebony power streaming through his soul. He listens and it speaks back — he senses its will and lets it guide him — he embraces the dark magic as an extension of himself."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story= _ "When spring comes, Darken Volk leads Malin toward the jagged mountain peaks in the north. In the higher reaches, snow begins to melt into rivulets of water, streaming downward and fracturing the surface of the ice that blankets the river Listra. Though the unstable terrain is hazardous to traverse, the elder necromancer insists that they press on, saying that he hopes to catch the orc fighters unprepared by arriving early in the year."
+            story= _ "When spring comes, Darken Volk leads Malin toward the jagged mountain peaks in the north. In the higher reaches, snow begins to melt into rivulets of water, streaming downward and fracturing the surface of the ice that blankets the river Listra. Though the unstable terrain is hazardous to traverse, the elder necromancer insists that they press on, saying that he hopes to catch the orcish fighters unprepared by arriving early in the year."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
     [/story]
@@ -189,7 +189,7 @@ end
 
         [message]
             speaker=Darken Volk
-            message= _ "Across this pass lies the eastern edge of the Heart Mountains proper. For their distinctive shape, the orcs call these the ‘Whitefang’ Mountains, which is also the namesake of the dominant clan in this region. They are the very same whoS killed your father."
+            message= _ "Across this pass lies the eastern edge of the Heart Mountains proper. For their distinctive shape, the orcs call these the ‘Whitefang’ Mountains, which is also the namesake of the dominant clan in this region. They are the very same who killed your father."
         [/message]
 
         [message]
@@ -255,7 +255,7 @@ end
 
         [message]
             speaker="K'rrlar Oban"
-            message=_ "Wait, human! I may be of use to you! What is it that you desire? Slaves? Gold? Land? We do not have to be enemies!"
+            message=_ "Wait, human! I may be of use to you! What is it that you desire? Slaves? Gold? Land?"
         [/message]
         [message]
             speaker=Malin Keshar
@@ -424,7 +424,7 @@ end
 
         [message]
             speaker=Malin Keshar
-            message=_ "It’s time to hunt some orcs."
+            message=_ "It’s time to hunt down the Whitefangs."
         [/message]
 
         {CLEAR_VARIABLE weakened_ice}
