DiD S5: dialogue revision

--- a/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
@@ -20,11 +20,11 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "Companionship and peace... perhaps they are but a farce and certainly an impossibility with the threat of the orc clans still looming. Perhaps there is no point in reminiscing. He has never been one for regrets."
+            story=_ "Companionship and peace... perhaps they are but a farce and certainly an impossibility with the threat of the orcish clans still looming. Perhaps there is no point in reminiscing. He has never been one for regrets."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "Malin turns his attention to the task at hand. Darken Volk leads him through the heart of the Whitefang territory, where they terrorize and murder entire camps of orcs with their undead minions. Word spreads among the orcish towns, which begin to post guards and leave torches burning all night. These measures do little to help them."
+            story=_ "Malin turns his attention to the task at hand. Darken Volk leads him through the heart of the Whitefang territory, where they terrorize and murder entire camps of orcs with their undead minions. Word spreads among the orcish towns, which begin to post more guards and leave torches burning all night. This does little to help them."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -370,7 +370,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Orcs are no more than beasts. They bellow out against a weaker foe as if that makes them mighty, but will always flee in the face of an overwhelming force. Nevertheless, the Whitefangs still number many and have some ties to the other orc clans as well. You must hunt this chieftain down before he can raise more reinforcements, else we may soon have dozens more on our tail."
+            message= _ "Orcs are no more than beasts. They bellow out against a weaker foe as if that makes them mighty, but will always flee in the face of an overwhelming force. Nevertheless, the Whitefangs still number many and have some ties to the other orcish clans as well. You must hunt this chieftain down before he can alert the others, else we may soon have dozens more on our tail."
         [/message]
 
         [message]
