Lancer defense animations

--- a/data/core/units/humans/Horse_Lancer.cfg
+++ b/data/core/units/humans/Horse_Lancer.cfg
@@ -29,7 +29,8 @@
         damage=12
         number=3
     [/attack]
-    {DEFENSE_ANIM "units/human-loyalists/lancer/lancer.png" "units/human-loyalists/lancer/lancer.png" {SOUND_LIST:HORSE_HIT} }
+    {DEFENSE_ANIM_FILTERED "units/human-loyalists/lancer/lancer-defend2-miss.png" "units/human-loyalists/lancer/lancer-defend1.png" {SOUND_LIST:HORSE_HIT} (hits=miss)}
+    {DEFENSE_ANIM_FILTERED "units/human-loyalists/lancer/lancer-defend2.png" "units/human-loyalists/lancer/lancer-defend1.png" {SOUND_LIST:HORSE_HIT} (hits=hit,kill)}
     [movement_anim]
         start_time=0
         [frame]
