DiD S12: dialogue revision

--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -53,7 +53,7 @@
                 [/part]
                 [part]
                     # po: This text comes from the epilogue of Secrets of the Ancients, edited to avoid revealing the name of the campaign or the names of the protagonists
-                    story = _"<i>“I realize now... the world is not ready for our knowledge. They cannot understand it, that primordial fear... we have conquered it, death, but they look upon us and superficial judgment drives them to ignorant terror. For now, I shall just with draw, perhaps live in the old troll city and learn the applications of mountain fire. In some future time, less conservative attitudes may dominate. Maybe then, our knowledge can be put to good use. Until then, I can certainly afford to wait. In the meantime, we are doing what we can to hasten that day.”</i>"
+                    story = _"<i>“We prevailed today on the field, but our victory did not please me. I realize now... the world is not ready for our knowledge. They cannot understand that we have conquered that primordial fear: death. Instead, as they look upon us, judgment of our appearance drives them to ignorant terror. I give up on all of them. [...] In some future time, less conservative attitudes may dominate, and our knowledge can be put to good use. I can certainly afford to wait. In the meantime, we are doing what we can to hasten that day.”</i>"
                     {STORYTXT_BACKGROUND book.jpg}
                 [/part]
                 [part]
@@ -72,7 +72,7 @@
             [then]
                 [part]
                     # po: This text comes from the epilogue of Secrets of the Ancients, edited to avoid revealing the name of the campaign or the names of the protagonists
-                    story = _"<i>“I realize now... the world is not ready for our knowledge. They cannot understand it, that primordial fear... we have conquered it, death, but they look upon us and superficial judgment drives them to ignorant terror. For now, I shall just with draw, perhaps live in the old troll city and learn the applications of mountain fire. In some future time, less conservative attitudes may dominate. Maybe then, our knowledge can be put to good use. Until then, I can certainly afford to wait. In the meantime, we are doing what we can to hasten that day.”</i>"
+                    story = _"<i>“We prevailed today on the field, but our victory did not please me. I realize now... the world is not ready for our knowledge. They cannot understand that we have conquered that primordial fear: death. Instead, as they look upon us, judgment of our appearance drives them to ignorant terror. I give up on all of them. [...] In some future time, less conservative attitudes may dominate, and our knowledge can be put to good use. I can certainly afford to wait. In the meantime, we are doing what we can to hasten that day.”</i>"
                     {STORYTXT_BACKGROUND book.jpg}
                 [/part]
                 [part]
@@ -476,6 +476,71 @@
     [event]
         name=start
 
+        # Additional dialog depending on how many times the scenario has been played
+        [switch]
+            variable=timesForever
+            [case]
+                value=1
+                # no additional dialog
+            [/case]
+            [case]
+                value=2
+                [message]
+                    speaker=Mal Keshar
+                    message= _ "I will destroy you like the last foolish hero who challenged me."
+                [/message]
+            [/case]
+            [case]
+                value=3
+                [message]
+                    speaker=Mal Keshar
+                    message= _ "Another foolish hero? Seriously?"
+                [/message]
+            [/case]
+            [case]
+                value=4
+                [message]
+                    speaker=Mal Keshar
+                    message= _ "Is there an endless supply of foolish heroes with death wishes? Honestly, where do you all come from?"
+                [/message]
+            [/case]
+            [else]
+                # 5 and up
+                {RANDOM 1..4}
+                [switch]
+                    variable=random
+                    [case]
+                        value=1
+                        [message]
+                            speaker=Mal Keshar
+                            message= _ "Am I doomed to fight foolish heroes forever?"
+                        [/message]
+                    [/case]
+                    [case]
+                        value=2
+                        [message]
+                            speaker=Mal Keshar
+                            message= _ "How long is this going to keep happening?"
+                        [/message]
+                    [/case]
+                    [case]
+                        value=3
+                        [message]
+                            speaker=Mal Keshar
+                            message= _ "..."
+                        [/message]
+                    [/case]
+                    [else]
+                        [message]
+                            speaker=Mal Keshar
+                            message= _ "At this point, I would be more surprised if these foolish heroes stopped showing up."
+                        [/message]
+                    [/else]
+                [/switch]
+                {CLEAR_VARIABLE random}
+            [/else]
+        [/switch]
+        
         [switch]
             variable=randomHero
             [case]
@@ -544,71 +609,6 @@
                     message= _ "The Whitefang Orcs! It is you who despoiled my motherland and razed my home. It is you who forced me to resort to necromancy to protect myself. It is you who ended my mortal life and forced me to become a lich. And you desire vengeance? Hah! The irony of this would be hysterical if I could still feel such an emotion."
                 [/message]
             [/case]
-        [/switch]
-
-        # Additional dialog depending on how many times the scenario has been played
-        [switch]
-            variable=timesForever
-            [case]
-                value=1
-                # no additional dialog
-            [/case]
-            [case]
-                value=2
-                [message]
-                    speaker=Mal Keshar
-                    message= _ "I will destroy you like the last foolish hero who challenged me."
-                [/message]
-            [/case]
-            [case]
-                value=3
-                [message]
-                    speaker=Mal Keshar
-                    message= _ "Another foolish hero? Seriously?"
-                [/message]
-            [/case]
-            [case]
-                value=4
-                [message]
-                    speaker=Mal Keshar
-                    message= _ "Is there an endless supply of foolish heroes with death wishes? Honestly, where do you all come from?"
-                [/message]
-            [/case]
-            [else]
-                # 5 and up
-                {RANDOM 1..4}
-                [switch]
-                    variable=random
-                    [case]
-                        value=1
-                        [message]
-                            speaker=Mal Keshar
-                            message= _ "Am I doomed to fight foolish heroes forever?"
-                        [/message]
-                    [/case]
-                    [case]
-                        value=2
-                        [message]
-                            speaker=Mal Keshar
-                            message= _ "How long is this going to keep happening?"
-                        [/message]
-                    [/case]
-                    [case]
-                        value=3
-                        [message]
-                            speaker=Mal Keshar
-                            message= _ "..."
-                        [/message]
-                    [/case]
-                    [else]
-                        [message]
-                            speaker=Mal Keshar
-                            message= _ "At this point, I would be more surprised if these foolish heroes stopped showing up."
-                        [/message]
-                    [/else]
-                [/switch]
-                {CLEAR_VARIABLE random}
-            [/else]
         [/switch]
 
         # this event is after the prestart event, so it will happen on the first iteration
@@ -801,11 +801,11 @@
                             {STORYTXT_BACKGROUND end.jpg}
                         [/part]
                         [part]
-                            story= _ "Years pass. Every summer when the mountain passes become clear, humans, elves and dwarves patrol to repel orcish raiders. Undead no longer trouble the patrols, and memories of the lich fade to become just background in the tale of the brave hero’s victory."
+                            story= _ "Years pass. Every summer, by the time the mountainous paths and high passes shed their wintry gowns of snow, humans, elves and dwarves patrol to repel orcish raiders. Undead no longer trouble the watches and memories of the lich fade to mere legend."
                             {STORYTXT_BACKGROUND end.jpg}
                         [/part]
                         [part]
-                            story= _ "Rumors circulate that fortune smiles on those patrols. That when attacked by orcs at night, it sometimes seems that more blades than just the patrol’s own are fighting the orcs."
+                            story= _ "Rumors circulate about a spirit of good fortune that protects these guards. When attacked by orcs at night, it is said that the darkness itself will descend to repel the assailants. True or not, it always seems that the resulting carnage of each battle contains far fewer bodies than there should be."
                             {STORYTXT_BACKGROUND end.jpg}
                         [/part]
                     [/story]
