DiD S4: dialogue fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
@@ -18,7 +18,7 @@
     [story]
         [part]
             music=underground.ogg
-            story= _ "Weeks pass in the cold, bare caverns. There is little light and little food, but Malin’s burning desire for vengeance sustains him through his training. As the grip of black magic grows stronger, so does his control of the undead. He finds it to be a mastery of a different sort than what he learned at the Academy. The magic reaches out to him as it never has before; he <i>feels</i> it, the flows of energy, ebony power streaming through his soul. He listens and it speaks back — he senses its will and lets it guide him — he embraces the dark magic as an extension of himself."
+            story= _ "Weeks pass in the cold, bare caverns. There is little light and little food, but Malin’s burning desire for vengeance sustains him through his training. As the grip of black magic grows stronger, so does his control of the undead. He finds it to be a mastery of a different sort than what he was taught at the Academy. The magic reaches out to him as it never has before; he <i>feels</i> it, the flows of energy, ebony power streaming through his soul. He listens and it speaks back — he senses its will and lets it guide him — he embraces the dark magic as an extension of himself."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -199,7 +199,7 @@ end
 
         [message]
             speaker=Darken Volk
-            message= _ "To reach them, we must first destroy the orcs who block our way out of the mountain pass. Then, we can move on to our main target."
+            message= _ "To reach them, we must first destroy the orcs who block our way out of this mountain pass. Then, we can move on to our main target."
         [/message]
 
         [message]
