DiD S5: dialogue revision

--- a/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
@@ -10,13 +10,13 @@
 
     {DEFAULT_SCHEDULE_MORNING}
 
-    {INTRO_AND_SCENARIO_MUSIC northerners.ogg battle.ogg}
+    {INTRO_AND_SCENARIO_MUSIC battle.ogg northerners.ogg}
     {EXTRA_SCENARIO_MUSIC northern_mountains.ogg}
     {EXTRA_SCENARIO_MUSIC siege_of_laurelmor.ogg}
 
     [story]
         [part]
-            story=_ "The cycle of the seasons churns and summer and fall roll around once more. Malin’s thoughts turn back to Parthyn frequently, where a year prior, he had still been among family and friends in the rustic little town that he had called home. His forced departure has turned him into a forsaken wanderer, he thinks, but the still burning image of his father being cut down amidst the ruins of his home is imprinted at the forefront of his mind."
+            story=_ "The cycle of the seasons churns and summer and fall roll around once more. Malin’s thoughts turn back to Parthyn frequently, where a year prior, he had still been among family and friends in the rustic little town that he still thinks of as his estranged home. His unjust banishment has turned him into a forsaken wanderer, he thinks, but the still burning image of his father being cut down amidst the ruins of his home is imprinted at the forefront of his mind."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -24,7 +24,7 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "Malin turns his attention to the task at hand. Darken Volk leads him through the heart of the Whitefang territory, where they terrorize and murder entire camps of orcs with their undead minions. Word spreads among the orcish towns, which begin to post more guards and leave torches burning all night. This does little to help them."
+            story=_ "Malin turns his attention to the task at hand. Darken Volk leads him through the heart of the Whitefang territory, where they terrorize and murder entire camps of orcs with their undead minions. Word spreads among the orcish towns, which begin to post more guards and dispatch frequent patrols to exterminate the two necromancers. All of their attempts fail."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -32,7 +32,7 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "Malin and Darken Volk continue their raids on the orcs and eventually force the usually fractious Whitefang chieftains to unite in opposition. The orcs chase the two necromancers east toward the mouth of the river men call the Longlier and Elves call the Arkan-thoria, where they manage to surround the humans and force a fight."
+            story=_ "Malin and Darken Volk continue their raids on the orcs and eventually force the usually fractious Whitefang chieftains to unite in opposition. The orcs pursue the two necromancers east toward the mouth of the river men call the Longlier and Elves call the Arkan-thoria, where they manage to surround the humans and force a fight."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
     [/story]
@@ -218,7 +218,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Even before the very founding of Wesnoth, you have hounded humans at every turn. You have trampled our fields, slaughtered our livestock, and burned our houses. You have brought war to a place of peace and death to a place of life. You are nothing but remorseless killers and savage beasts. Your kind deserves no mercy and shall receive none. I will crush you into the dust and make you into my slaves for all eternity."
+            message= _ "Even before the very founding of Wesnoth, you have hounded my people at every turn. You have trampled our fields, slaughtered our livestock, and burned our houses. You have brought war to a place of peace and death to a place of life. You are nothing but remorseless killers and savage beasts. Your kind deserves no mercy and shall receive none. I will crush you into the dust and make you into my slaves for all eternity."
         [/message]
 
         [message]
