DiD S6: dialogue fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -25,7 +25,7 @@
             {STORYTXT_BACKGROUND parthyn.jpg}
         [/part]
         [part]
-            story= _ "He shifts course and takes a shortcut closer to the river, hoping to cut the orcs off before they can reach the Great River. Malin tramps through the woods tirelessly, forsaking several days’ sleep as he and his servants draw closer to the Great River. Soon, he recognizes some familiar surroundings..."
+            story= _ "Malin tramps through the woods tirelessly, forsaking several days’ sleep as he and his servants draw closer to the Great River, hoping to cut off the orcs before they reach Parthyn. Soon, he recognizes some familiar surroundings..."
             {STORYTXT_BACKGROUND parthyn.jpg}
         [/part]
     [/story]
@@ -237,7 +237,7 @@
             [then]
                 [message]
                     speaker=Drogan
-                    message= _ "I hoped that I would never see you again, Malin. I see that you did not take your banishment seriously, so I will make this clear: no matter what the reason you have returned, you are not welcome here. Take one step closer to Parthyn and I will order my soldiers to attack you."
+                    message= _ "I hoped that I would never see you again, Malin. I see that you are not taking your banishment seriously, so I will make this clear: no matter for what reason you have returned, you are not welcome here. Take one step closer to Parthyn and I will order the guards to attack you."
                 [/message]
 
                 [message]
@@ -267,7 +267,7 @@
 
                 [message]
                     role=advisor
-                    message=_ "Master, do not listen to them! He, too, has a choice, but he foolishly spurns your aid! He jeopardizes the safety of Parthyn!"
+                    message=_ "Master, do not listen to them! He, too, has a choice, but he foolishly chooses to spurn your aid! He jeopardizes the safety of Parthyn!"
                 [/message]
             [/then]
             [else]
@@ -283,17 +283,17 @@
 
                 [message]
                     speaker=Drogan
-                    message= _ "It does not take a trained mage to realize that those ‘magical arts’ refer to necromancy! That creature stinks of death!"
+                    message= _ "It does not take a trained mage to realize that by ‘magical arts’, you refer to necromancy! That creature reeks of death!"
                 [/message]
 
                 [message]
                     speaker=Malin Keshar
-                    message= _ "And why should you care about such things? Orcs march on Parthyn! I am here to help defend the town!"
+                    message= _ "And why should you care about such things? Orcs march on Parthyn! We must defend the town!"
                 [/message]
 
                 [message]
                     speaker=Drogan
-                    message= _ "Better to face the orcish menace alone than to dabble in dark magic! I warned you about this before, yet you failed to heed my advice. Your father would be ashamed to see the end to which you’ve come."
+                    message= _ "Better to face the orcish menace alone than to embrace dark magic! I warned you about this before, yet you failed to heed my advice. Your father would turn in his grave if he could see what you’ve become."
                 [/message]
 
                 [message]
@@ -335,7 +335,7 @@
 
         [message]
             role=advisor
-            message= _ "Master, he threatens the safety of the city by choosing to fight you."
+            message= _ "Master, he threatens the safety of the city by standing in your way."
         [/message]
 
         [message]
@@ -345,7 +345,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "<i>If I want the people of Parthyn to accept me back, I must be cautious. I must not harm any of them besides Drogan, or they will surely oust me for good.</i>"
+            message= _ "<i>If I want the people of Parthyn to accept me back, I must be cautious. I must not kill any of them besides Drogan, or they will surely oust me for good.</i>"
         [/message]
     [/event]
 
@@ -415,28 +415,22 @@
             terrain=Ce
         [/terrain]
         [redraw][/redraw]
+		
+		[message]
+			side=2
+			canrecruit=yes
+			message= _ "Grunts! Prepare the camp! We attack the city tonight— wait. You! Necromancer, you followed us all the way here?!"
+		[/message]
 
         [if]
             {DID_RTP_HAS_DROGAN}
             [then]
-                [message]
-                    side=2
-                    canrecruit=yes
-                    message= _ "Grunts! Prepare the camp! We attack the city tonight— wait. You! Necromancer, you followed us all the way here?!"
-                [/message]
-
                 [message]
                     speaker=Malin Keshar
                     message= _ "Did you really think you could outrun the dead, who need no rest nor sleep? Prepare to meet your makers, orc. Drogan, I will show you what my new powers are capable of. You will see how foolish you are to oppose me."
                 [/message]
             [/then]
             [else]
-                [message]
-                    side=2
-                    canrecruit=yes
-                    message= _ "Grunts! Prepare the camp! We attack the city tonight— wait. You! Necromancer, you followed us all the way here?!"
-                [/message]
-
                 [message]
                     speaker=Malin Keshar
                     message= _ "Did you really think you could outrun the dead, who need no rest nor sleep? Prepare to meet your makers, orc."
@@ -467,8 +461,8 @@
 
                 [message]
                     speaker=unit
-                    message= _ "I joined Malin of my own free will! Drogan, you are a fool who would let the orcs slay us all simply because you do not understand the power that necromancy holds."
-                    female_message= _ "female^I joined Malin of my own free will! Drogan, you are a fool who would let the orcs slay us all simply because you do not understand the power that necromancy holds."
+                    message= _ "I joined Malin of my own free will! You fools simply do not understand the power that necromancy holds."
+                    female_message= _ "female^I joined Malin of my own free will! You fools simply do not understand the power that necromancy holds."
                 [/message]
 
                 [message]
@@ -489,13 +483,13 @@
 
                 [message]
                     speaker=unit
-                    message= _ "I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin’s powers!"
-                    female_message= _ "female^I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin’s powers!"
+                    message= _ "I joined Malin of my own free will! The orcs would have overrun you if not for Malin’s powers!"
+                    female_message= _ "female^I joined Malin of my own free will! The orcs would have overrun you if not for Malin’s powers!"
                 [/message]
 
                 [message]
                     speaker=Dela Keshar
-                    message= _ "Evil? You necromancers defile the bodies of the dead and slaughter the innocent for your sick games. How dare you speak of others as evil! Do you not see the depravity that you have become, Malin?"
+                    message= _ "Evil? You necromancers defile the bodies of the dead and slaughter the innocent for your sick perversions. How dare you speak of others as evil! Do you not see the depravity that you have become, Malin?"
                 [/message]
 
                 [message]
@@ -553,9 +547,14 @@
                     message= _ "What?! You ungrateful cur! You would sack the city and let all of our people die, and for what? Only to spurn something you do not understand? You are a fool. Parthyn will only be under greater danger with you leading it. If the town is to survive, <i>you</i> are the one who must leave!"
                 [/message]
 
+				[message]
+                    speaker=Dela
+                    message= _ "Have you lost your mind, Malin? There’s no way we’re going to banish Drogan!"
+                [/message]
+				
                 [message]
                     speaker=Drogan
-                    message= _ "Have you lost your mind, Malin? In truth, I did not want to fight you as one of my former friends, but you leave me little choice if you will so brazenly attack Parthyn."
+                    message= _ "Malin, in truth, I do not want to fight you as one of my former friends. Leave Parthyn. I will not ask you again."
                 [/message]
 
                 [message]
@@ -682,7 +681,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "What? I have not even harmed a single villager or guardsman besides Drogan! I am only trying to help, but none of you will listen to reason!"
+            message= _ "What? I have not harmed even a single villager or guardsman besides Drogan! I am only trying to help, but none of you will listen to reason!"
         [/message]
 
         [message]
@@ -820,7 +819,7 @@
 
         [message]
             speaker=OWarlord
-            message= _ "Look what we have here! A human city, crippled without its commander and a necromancer with only a few paltry minions at his command. The wolves will feed well tonight!"
+            message= _ "Look what we have here! A human city on the verge of collapse and a necromancer with only a few paltry minions at his command. The wolves will feed well tonight!"
         [/message]
         [message]
             speaker=Malin Keshar
@@ -850,7 +849,7 @@
         [message]
             speaker=Malin Keshar
             # wmllint: local spelling Zephrin
-            message= _ "O Gods, how did it come to this? My own sister determined to personally see to my demise. Banished from Parthyn, my country, my home... spurned by my people, whom I have given everything for... nothing has gone right ever since I tried to curse that fat toad Zephrin for mocking my up-country accent. I was only testing my new spell on him! It was only supposed to be a simple curse! How was I supposed to know it would kill him? Damned Academy."
+            message= _ "O Gods, how did it come to this? My own sister determined to personally see to my demise. Banished from Parthyn, my country, my home... spurned by my people, whom I have given everything for... nothing has gone right ever since I tried to curse that fat toad Zephrin for mocking my up-country accent. I was only testing my new spell on him! It was only supposed to be a simple curse! How was I supposed to know it would kill him? Blasted Academy."
         [/message]
 
         [message]
